# nova-protocol

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  deny.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
apps/explorer/: index.html  package-lock.json  package.json
apps/explorer/src/: App.tsx  main.tsx
apps/explorer/src/components/: AddressView.tsx  BlockDetail.tsx  BlockList.tsx  NetworkStats.tsx  TransactionDetail.tsx
apps/explorer/src/hooks/: useExplorer.ts
apps/explorer/src/services/: api.ts
apps/explorer/src/store/: explorerStore.ts
apps/merchant-terminal/: index.html  package-lock.json  package.json  tailwind.config.js
apps/merchant-terminal/src/: App.tsx  index.css
apps/merchant-terminal/src/components/: Analytics.tsx  Dashboard.tsx  QRGenerator.tsx  Settings.tsx  Terminal.tsx  TransactionFeed.tsx
apps/merchant-terminal/src/hooks/: useMerchant.ts
apps/merchant-terminal/src/lib/: api.ts  types.ts
apps/wallet-web/: index.html  package-lock.json  package.json
apps/wallet-web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/wallet-web/src/components/: CreditMarket.tsx  Dashboard.tsx  IdentityCard.tsx  ReceivePayment.tsx  SendPayment.tsx  Settings.tsx  TransactionHistory.tsx  WalletSetup.tsx
apps/wallet-web/src/hooks/: useCredit.ts  useNova.ts  useWallet.ts
apps/wallet-web/src/lib/: api.ts  crypto.ts  nova-client.ts
apps/wallet-web/src/stores/: walletStore.ts
contracts/: Cargo.toml
contracts/src/: credit_escrow.rs  dispute_resolution.rs  lib.rs  token_factory.rs
contracts/tests/: credit_escrow_test.rs  dispute_test.rs
docker/: Dockerfile.api  Dockerfile.node  docker-compose.yml
node/: Cargo.toml
node/config/: devnet.toml  mainnet.toml  testnet.toml
node/src/: api.rs  cli.rs  lib.rs  logging.rs  main.rs  metrics.rs
protocol/: Cargo.toml
protocol/benches/: consensus_bench.rs  signing_bench.rs  zkp_bench.rs
protocol/examples/: demo.rs
protocol/src/: config.rs  lib.rs
protocol/src/credit/: mod.rs
protocol/src/crypto/: encryption.rs  hash.rs  keys.rs  mod.rs  pfs.rs  signatures.rs
protocol/src/identity/: did.rs  keypair.rs  mod.rs  nova_id.rs  recovery.rs
protocol/src/network/: consensus.rs  consensus_loop.rs  gossip.rs  mempool.rs  mod.rs  node.rs  producer.rs  rpc.rs  sync.rs
protocol/src/ntp/: broadcast.rs  error.rs  handshake.rs  mod.rs  proof_request.rs  receipt.rs  settlement.rs
protocol/src/storage/: block.rs  chain.rs  db.rs  mod.rs  state.rs
protocol/src/transaction/: builder.rs  confidential.rs  mod.rs  receipt.rs  signing.rs  types.rs  verification.rs
protocol/src/vault/: balance.rs  credit.rs  mod.rs  token.rs  wallet.rs
protocol/src/zkp/: circuit.rs  commitment.rs  mod.rs  prover.rs  verifier.rs
protocol/tests/: e2e.rs
scripts/: bench-report.sh  benchmark.sh  fund-test-accounts.sh  generate-genesis.sh  seed-demo.sh  setup-devnet.sh
sdk/python/: pyproject.toml
sdk/python/nova_sdk/: __init__.py  client.py  identity.py  transaction.py  types.py  wallet.py
sdk/python/tests/: test_client.py  test_identity.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  credit.ts  identity.ts  index.ts  nova.ts  rpc.ts  transaction.ts  types.ts  utils.ts  wallet.ts
sdk/typescript/tests/: client.test.ts  identity.test.ts  nova.test.ts  transaction.test.ts
