[package]
name = "nova-contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NOVA Protocol smart contracts"

[dependencies]
nova-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
